adicionado modal sobre range 0 a 999 dos inputs

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </div>
                     </li>
                 </ul>
-                <button id="confirma" >Confirmar</button>
+                <button id="confirma" type="submit" >Confirmar</button>
             </form>
            <div class="nome">
             <span class="spanResultado" id="eu">
@@ -79,5 +79,9 @@
         </div>
         </div>
     </main>
+    <div id="modal">
+
+        <div>Não deve colocar valores negativos ou maiores que 999 </div>
+    </div>
 </body>
 </html>
